# sally

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.github/workflows/: daily.yml
.streamlit/: config.toml
data/: seed_research.json
data/raw/: seed_real_leads.csv
src/sally/: __init__.py  classify.py  clean.py  cli.py  draft.py  identity.py  ingest.py  intent.py  notify.py  pipeline.py  queue.py  research.py  score.py  sequence.py  store.py  webview.py
tests/: test_pipeline.py
